--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WPS_Boilerplate",
+  "name": "MWB_Boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -19,12 +19,13 @@
     "gulp"
   ],
   "devDependencies": {
-    "@date-io/date-fns": "v1",
+    "@date-io/date-fns": "^1.3.13",
     "@fontsource/roboto": "^4.5.0",
-    "@material-ui/core": "^4.12.2",
-    "@material-ui/pickers": "latest",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/pickers": "^3.3.10",
     "@material/textfield": "^11.0.0",
     "@popperjs/core": "^2.9.2",
+    "@woocommerce/dependency-extraction-webpack-plugin": "^2.3.0",
     "@wordpress/scripts": "^16.1.4",
     "autoprefixer": "^10.3.1",
     "axios": "^0.21.1",
@@ -36,7 +37,7 @@
     "datatables.net": "^1.10.25",
     "datatables.net-buttons": "^1.7.1",
     "datatables.net-responsive": "^2.2.9",
-    "date-fns": "latest",
+    "date-fns": "^2.23.0",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
@@ -51,5 +52,10 @@
     "gulp-uglify": "^3.0.2",
     "postcss": "^8.3.6",
     "postcss-combine-media-query": "^1.0.1"
+  },
+  "dependencies": {
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@woocommerce/extend-cart-checkout-block": "^1.2.0"
   }
 }
