--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 node_modules
 node_modules/*
+.github
+.github/*
+.history
+.history/*
+.vscode
+.vscode/*
 vendor
 vendor/*
-.history
 # ignore compiled files
 *.com
 *.class
