--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider wp-scripts start",
     "build": "wp-scripts build",
     "check-engines": "wp-scripts check-engines",
     "check-licenses": "wp-scripts check-licenses",
     "lint:css": "wp-scripts lint-style",
     "lint:js": "wp-scripts lint-js",
     "lint:pkg-json": "wp-scripts lint-pkg-json",
-    "start": "wp-scripts start",
     "test:e2e": "wp-scripts test-e2e",
     "test:unit": "wp-scripts test-unit-js"
   },
@@ -19,25 +18,26 @@
     "gulp"
   ],
   "devDependencies": {
-    "@date-io/date-fns": "^1.3.13",
+    "@date-io/date-fns": "v1",
     "@fontsource/roboto": "^4.5.0",
     "@material-ui/core": "^4.12.3",
-    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/pickers": "latest",
     "@material/textfield": "^11.0.0",
     "@popperjs/core": "^2.9.2",
     "@woocommerce/dependency-extraction-webpack-plugin": "^2.3.0",
-    "@wordpress/scripts": "^16.1.4",
+    "@wordpress/scripts": "^30.5.1",
     "autoprefixer": "^10.3.1",
     "axios": "^0.21.1",
     "browser-sync": "^2.27.4",
     "child_process": "^1.0.2",
     "core-util-is": "^1.0.2",
+    "css-loader": "^7.1.2",
     "cssnano": "^5.0.7",
     "datatables": "^1.10.18",
     "datatables.net": "^1.10.25",
     "datatables.net-buttons": "^1.7.1",
     "datatables.net-responsive": "^2.2.9",
-    "date-fns": "^2.23.0",
+    "date-fns": "latest",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
@@ -51,11 +51,7 @@
     "gulp-terser": "^2.0.1",
     "gulp-uglify": "^3.0.2",
     "postcss": "^8.3.6",
-    "postcss-combine-media-query": "^1.0.1"
-  },
-  "dependencies": {
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
-    "@woocommerce/extend-cart-checkout-block": "^1.2.0"
+    "postcss-combine-media-query": "^1.0.1",
+    "style-loader": "^4.0.0"
   }
 }
